<resources>
    <string name="app_name">DemoApp</string>
    <string name="navigation_drawer_open">开</string>
    <string name="navigation_drawer_close">关</string>
    <string name="list_empty_tips">这里好像什么都没有</string>
    <string name="list_empty_loading">网络请求中，请稍等。。。</string>
    <string name="list_empty_error">网络请求错误，请点击重试</string>
    <string name="system_download_component_disable">下载服务不可用,请您启用</string>
    <string name="large_text">
       整个权限里,可以分为系统权限和特殊权限授权。
        \n系统权限中,又分为normal和dangerous类型。
        \n\tnormal:这个权限类型并不直接威胁到用户的隐私,可以直接在manifest清单里注册,系统会帮我们默认授权的。
         \n\tdangerous:这个可以直接给app访问用户一些敏感的数据,不仅需要在manifest清单里注册,同时在使用的时候,需要向系统请求授权。
        \n值得注意一点,这里有特殊权限授权的区别,分别是SYSTEM_ALERT_WINDOW 和 WRITE_SETTINGS,虽然这两个权限也是属于dangerous权限类型,但是这两个授权请求方式和其他dangerous权限是不一样的,需要特殊处理 。
“android.permission.SYSTEM_ALERT_WINDOW” “android.permission.WRITE_SETTINGS” 这两个权限,实现方式跟上之前在工作中,碰到一种情况,如果是运行在6.0的版本上是需要走新的权限模型,
        如果是运行在老的版本上,则需要进行一个判断dangerous列表: Permission Group Permissions CALENDARREAD_CALENDARWRITE_CALENDAR
        CAMERACAMERA CONTACTSREAD_CONTACTSWRITE_CONTACTSGET_ACCOUNTS LOCATIONACCESS_FINE_LOCATIONACCESS_COARSE_LOCATION
        MICROPHONERECORD_AUDIO PHONEREAD_PHONE_STATECALL_PHONEREAD_CALL_LOGWRITE_CALL_LOGADD_VOICEMAILUSE_SIPPROCESS_OUTGOING_CALLS
        SENSORSBODY_SENSORS SMSSEND_SMSRECEIVE_SMSREAD_SMSRECEIVE_WAP_PUSHRECEIVE_MMS STORAGEREAD_EXTERNAL_STORAGEWRITE_EXTERNAL_STORAGE
        \n1.android.permission.WRITE_USER_DICTIONARY 允许应用程序向用户词典中写入新词
        \n2.android.permission.WRITE_SYNC_SETTINGS 写入Google在线同步设置
        \n3.android.permission.WRITE_SOCIAL_STREAM 读取用户的社交信息流
        \n4.android.permission.WRITE_SMS 允许程序写短信
        \n5.android.permission.WRITE_SETTINGS 允许程序读取或写入系统设置
        \n6.android.permission.WRITE_SECURE_SETTINGS 允许应用程序读取或写入安全系统设置
        \n7.android.permission.WRITE_PROFILE 允许程序写入个人资料数据
        \n8.com.android.browser.permission.WRITE_HISTORY_BOOKMARKS 允许一个应用程序写(但不可读)用户的浏览历史和书签
        \n9.android.permission.WRITE_GSERVICES 允许程序修改Google服务地图
        \n10.android.permission.WRITE_EXTERNAL_STORAGE 允许程序写入外部存储,如SD卡上写文件
        \n11.android.permission.WRITE_CONTACTS 写入联系人,但不可读取
        \n12.android.permission.WRITE_CALL_LOG 允许程序写入(但是不能读)用户的联系人数据
        \n13.android.permission.WRITE_CALENDAR 允许程序写入日程,但不可读取
        \n14.android.permission.WRITE_APN_SETTINGS 允许程序写入网络GPRS接入点设置
        \n15.android.permission.WAKE_LOCK 允许程序在手机屏幕关闭后后台进程仍然运行
        \n16.android.permission.VIBRATE 允许程序振动
        \n17.android.permission.USE_SIP 允许程序使用SIP视频服务
        \n18.android.permission.USE_CREDENTIALS 允许程序请求验证从AccountManager
        \n19.android.permission.UPDATE_DEVICE_STATS 允许程序更新设备状态
        \n20.com.android.launcher.permission.UNINSTALL_SHORTCUT 删除快捷方式
        \n21.android.permission.TRANSMIT_IR 允许使用设备的红外发射器,如果可用
        \n22.android.permission.SYSTEM_ALERT_WINDOW 允许程序显示系统窗口
        \n23.android.permission.SUBSCRIBED_FEEDS_WRITE 允许程序写入或修改订阅内容的数据库
        \n24.android.permission.SUBSCRIBED_FEEDS_READ 允许程序访问订阅信息的数据库
        \n22.android.permission.STATUS_BAR 允许程序打开、关闭、禁用状态栏
        \n23.android.permission.SIGNAL_PERSISTENT_PROCESSES 允许程序发送一个永久的进程信号
        \n24.android.permission.SET_WALLPAPER_HINTS 允许程序设置壁纸建议
        \n25.android.permission.SET_WALLPAPER 允许程序设置桌面壁纸
        \n26.android.permission.SET_TIME_ZONE 允许程序设置系统时区
        \n27.android.permission.SET_TIME 允许程序设置系统时间
        \n28.android.permission.SET_PROCESS_LIMIT 允许程序设置最大的进程数量的限制
        \n29.android.permission.SET_PREFERRED_APPLICATIONS 允许程序设置应用的参数,已不再工作具体查看addPackageToPreferred(String) 介绍
        \n30.android.permission.SET_POINTER_SPEED 无法被第三方应用获得,系统权限
        \n31.android.permission.SET_ORIENTATION 允许程序设置屏幕方向为横屏或标准方式显示,不用于普通应用
        \n32.android.permission.SET_DEBUG_APP 允许程序设置调试程序,一般用于开发
        \n33.android.permission.SET_ANIMATION_SCALE 允许程序设置全局动画缩放
        \n34.android.permission.SET_ALWAYS_FINISH 允许程序设置程序在后台是否总是退出
        \n36.com.android.alarm.permission.SET_ALARM 允许程序设置闹铃提醒
        \n37.android.permission.SET_ACTIVITY_WATCHER 允许程序设置Activity观察器一般用于monkey测试
        \n38.android.permission.SEND_SMS 允许程序发送短信
        \n39.android.permission.SEND_RESPOND_VIA_MESSAGE 允许用户在来电的时候用你的应用进行即时的短信息回复。
        \n40.android.permission.RESTART_PACKAGES 允许程序结束任务通过restartPackage(String)方法,该方式将在外来放弃
        \n41.android.permission.REORDER_TASKS 允许程序重新排序系统Z轴运行中的任务
        \n42.android.permission.RECORD_AUDIO 允许程序录制声音通过手机或耳机的麦克
        \n43.android.permission.RECEIVE_WAP_PUSH 允许程序接收WAP PUSH信息
        \n44.android.permission.RECEIVE_SMS 允许程序接收短信
        \n45.android.permission.RECEIVE_MMS 允许程序接收彩信
        \n46.android.permission.RECEIVE_BOOT_COMPLETED 允许程序开机自动运行
        \n47.android.permission.REBOOT 允许程序重新启动设备
        \n48.android.permission.READ_USER_DICTIONARY 从一个提供器中获取数据,针对对应的提供器,应用程序需要“读访问权限”
        \n49.android.permission.READ_SYNC_STATS 允许程序读取同步状态,获得Google在线同步状态
        \n50.android.permission.READ_SYNC_SETTINGS 允许程序读取同步设置,读取Google在线同步设置
        \n51.android.permission.READ_SOCIAL_STREAM 读取用户的社交信息流
        \n52.android.permission.READ_SMS 允许程序读取短信内容
        \n53.android.permission.READ_PROFILE 访问用户个人资料
        \n54.android.permission.READ_PHONE_STATE 允许程序访问电话状态
        \n55.android.permission.READ_LOGS 允许程序读取系统底层日志
        \n56.android.permission.READ_INPUT_STATE 允许程序读取当前键的输入状态,仅用于系统
        \n57.com.android.browser.permission.READ_HISTORY_BOOKMARKS 允许程序读取浏览器收藏夹和历史记录
        \n58.android.permission.READ_FRAME_BUFFER 允许程序读取帧缓存用于屏幕截图
        \n59.android.permission.READ_EXTERNAL_STORAGE 程序可以读取设备外部存储空间(内置SDcard和外置SDCard)的文件,如果您的App已经添加了“WRITE_EXTERNAL_STORAGE ”权限 ,则就没 必要添加读的权限了,写权限已经包含了读权限了。
        \n60.android.permission.READ_CONTACTS 允许程序访问联系人通讯录信息
        \n61.android.permission.READ_CALL_LOG 读取通话记录
        \n62.android.permission.READ_CALENDAR 允许程序读取用户的日程信息
        \n63.android.permission.PROCESS_OUTGOING_CALLS 允许程序监视,修改或放弃播出电话
        \n64.android.permission.PERSISTENT_ACTIVITY 允许程序创建一个永久的Activity,该功能标记为将来将被移除
        \n65.android.permission.NFC 允许程序执行NFC近距离通讯操作,用于移动支持
        \n66.android.permission.MOUNT_UNMOUNT_FILESYSTEMS 允许程序挂载、反挂载外部文件系统
        \n67.android.permission.MOUNT_FORMAT_FILESYSTEMS 允许程序格式化可移动文件系统,比如格式化清空SD卡
        \n68.android.permission.MODIFY_PHONE_STATE 允许程序修改电话状态,如飞行模式,但不包含替换系统拨号器界面
        \n69.android.permission.MODIFY_AUDIO_SETTINGS 允许程序修改声音设置信息
        \n70.android.permission.MEDIA_CONTENT_CONTROL 允许一个应用程序知道什么是播放和控制其内容。不被第三方应用使用。
        \n71.android.permission.MASTER_CLEAR 允许程序执行软格式化,删除系统配置信息
        \n72.android.permission.MANAGE_DOCUMENTS 允许一个应用程序来管理文档的访问,通常是一个文档选择器部分
        \n73.android.permission.MANAGE_APP_TOKENS 管理创建、摧毁、Z轴顺序,仅用于系统
        \n74.android.permission.MANAGE_ACCOUNTS 允许程序管理AccountManager中的账户列表
        \n75.android.permission.LOCATION_HARDWARE 允许一个应用程序中使用定位功能的硬件,不使用第三方应用
        \n76.android.permission.KILL_BACKGROUND_PROCESSES 允许程序调用killBackgroundProcesses(String).方法结束后台进程
        \n77.android.permission.INTERNET 允许程序访问网络连接,可能产生GPRS流量
        \n78.android.permission.INTERNAL_SYSTEM_WINDOW 允许程序打开内部窗口,不对第三方应用程序开放此权限
        \n79.com.android.launcher.permission.INSTALL_SHORTCUT 创建快捷方式
        \n80.android.permission.INSTALL_PACKAGES 允许程序安装应用 81.android.permission.INSTALL_LOCATION_PROVIDER 允许程序安装定位提供
        \n82.android.permission.INJECT_EVENTS 允许程序访问本程序的底层事件,获取按键、轨迹球的事件流
        \n83.android.permission.HARDWARE_TEST 允许程序访问硬件辅助设备,用于硬件测试
        \n84.android.permission.GLOBAL_SEARCH 允许程序允许全局搜索
        \n85.android.permission.GET_TOP_ACTIVITY_INFO 允许一个应用程序检索私有信息是当前最顶级的活动,不被第三方应用使用
        \n86.android.permission.GET_TASKS 允许程序获取任务信息
        \n87.android.permission.GET_PACKAGE_SIZE 允许程序获取应用的文件大小
        \n88.android.permission.GET_ACCOUNTS 允许程序访问账户Gmail列表
        \n89.android.permission.FORCE_BACK 允许程序强制使用back后退按键,无论Activity是否在顶层
        \n90.android.permission.FLASHLIGHT 允许访问闪光灯
        \n91.android.permission.FACTORY_TEST 允许程序运行工厂测试模式
        \n92.android.permission.EXPAND_STATUS_BAR 允许程序扩展或收缩状态栏
        \n93.android.permission.DUMP 允许程序获取系统dump信息从系统服务
        \n94.android.permission.DISABLE_KEYGUARD 允许程序禁用键盘锁
        \n95.android.permission.DIAGNOSTIC 允许程序到RW到诊断资源
        \n96.android.permission.DEVICE_POWER 允许程序访问底层电源管理
        \n97.android.permission.DELETE_PACKAGES 允许程序删除应用
        \n98.android.permission.DELETE_CACHE_FILES 允许程序删除缓存文件
        \n99.android.permission.CONTROL_LOCATION_UPDATES 允许程序获得移动网络定位信息改变
        \n100.android.permission.CLEAR_APP_USER_DATA 允许程序清除用户数据
        \n101.android.permission.CLEAR_APP_CACHE 允许程序清除应用缓存
        \n102.android.permission.CHANGE_WIFI_STATE 允许程序改变WiFi状态
        \n103.android.permission.CHANGE_WIFI_MULTICAST_STATE 允许程序改变WiFi多播状态
        \n104.android.permission.CHANGE_NETWORK_STATE 允许程序改变网络状态,如是否联网
        \n105.android.permission.CHANGE_CONFIGURATION 允许当前应用改变配置,如定位
        \n106.android.permission.CHANGE_COMPONENT_ENABLED_STATE 改变组件是否启用状态
        \n107.android.permission.CAPTURE_VIDEO_OUTPUT 允许一个应用程序捕获视频输出,不被第三方应用使用
        \n108.android.permission.CAPTURE_SECURE_VIDEO_OUTPUT 允许一个应用程序捕获视频输出。不被第三方应用使用
        \n109.android.permission.CAPTURE_AUDIO_OUTPUT 允许一个应用程序捕获音频输出。不被第三方应用使用
        \n110.android.permission.CAMERA 允许程序访问摄像头进行拍照
        \n111.android.permission.CALL_PRIVILEGED 允许程序拨打电话,替换系统的拨号器界面
        \n112.android.permission.CALL_PHONE 允许程序从非系统拨号器里拨打电话
        \n113.android.permission.BROADCAST_WAP_PUSH WAP PUSH服务收到后触发一个广播
        \n114.android.permission.BROADCAST_STICKY 允许程序收到广播后快速收到下一个广播
        \n115.android.permission.BROADCAST_SMS 允许程序当收到短信时触发一个广播
        \n116.android.permission.BROADCAST_PACKAGE_REMOVED 允许程序删除时广播
        \n117.android.permission.BRICK 能够禁用手机,非常危险,顾名思义就是让手机变成砖头
        \n118.android.permission.BLUETOOTH_PRIVILEGED 允许应用程序配对蓝牙设备,而无需用户交互。这不是第三方应用程序可用。
        \n119.android.permission.BLUETOOTH_ADMIN 允许程序进行发现和配对新的蓝牙设备
        \n120.android.permission.BLUETOOTH 允许程序连接配对过的蓝牙设备
        \n121.android.permission.BIND_WALLPAPER 必须通过WallpaperService服务来请求,只有系统才能用
        \n122.android.permission.BIND_VPN_SERVICE 绑定VPN服务 必须通过VpnService服务来请求,只有系统才能用
        \n123.android.permission.BIND_TEXT_SERVICE 必须要求textservice(例如吗 spellcheckerservice),以确保只有系统可以绑定到它。
        \n124.android.permission.BIND_REMOTEVIEWS 必须通过RemoteViewsService服务来请求,只有系统才能用
        \n125.android.permission.BIND_PRINT_SERVICE 必须要求由printservice,以确保只有系统可以绑定到它。
        \n126.android.permission.BIND_NOTIFICATION_LISTENER_SERVICE 必须要求由notificationlistenerservice,以确保只有系统可以绑定到它。
        \n127.android.permission.BIND_NFC_SERVICE 由hostapduservice或offhostapduservice必须确保只有系统可以绑定到它。
        \n128.android.permission.BIND_INPUT_METHOD 请求InputMethodService服务,只有系统才能使用
        \n129.android.permission.BIND_DEVICE_ADMIN 请求系统管理员接收者receiver,只有系统才能使用
        \n130.android.permission.BIND_APPWIDGET 允许程序告诉appWidget服务需要访问小插件的数据库,只有非常少的应用才用到此权限
        \n131.android.permission.BIND_ACCESSIBILITY_SERVICE 请求accessibilityservice服务,以确保只有系统可以绑定到它。
        \n132.android.permission.AUTHENTICATE_ACCOUNTS 允许程序通过账户验证方式访问账户管理ACCOUNT_MANAGER相关信息
        \n133.com.android.voicemail.permission.ADD_VOICEMAIL 允许一个应用程序添加语音邮件系统
        \n134.android.permission.ACCOUNT_MANAGER 允许程序获取账户验证信息,主要为GMail账户信息,只有系统级进程才能访问的权限
        \n135.android.permission.ACCESS_WIFI_STATE 允许程序获取当前WiFi接入的状态以及WLAN热点的信息
        \n136.android.permission.ACCESS_SURFACE_FLINGER Android平台上底层的图形显示支持,一般用于游戏或照相机预览界面和底层模式的屏幕截图
        \n137.android.permission.ACCESS_NETWORK_STATE 允许程序获取网络信息状态,如当前的网络连接是否有效
        \n138.android.permission.ACCESS_MOCK_LOCATION 允许程序获取模拟定位信息,一般用于帮助开发者调试应用
        \n139.android.permission.ACCESS_LOCATION_EXTRA_COMMANDS 允许程序访问额外的定位提供者指令
        \n140.android.permission.ACCESS_FINE_LOCATION 允许程序通过GPS芯片接收卫星的定位信息
        \n141.android.permission.ACCESS_COARSE_LOCATION 允许程序通过WiFi或移动基站的方式获取用户错略的经纬度信息
        \n142.android.permission.ACCESS_CHECKIN_PROPERTIES 允许程序读取或写入登记check-in数据库属性表的权限
    </string>
    <string name="spread">spread</string>
    <string name="packed">packed</string>
    <string name="spread_inside">spread_inside</string>
    <string name="spread_weight">spread+weight</string>
    <string name="packed_bias">packed_bias</string>
</resources>